Imager release history.  Older releases can be found in Changes.old

Imager 0.76 - 11 Aug 2010
===========

Bug fixes:

 - the align_string() method would ignore a string of "0" due to a
   mis-use of C< ||= >.
   Thanks to Maurice Height for reporting this.
   https://rt.cpan.org/Ticket/Display.html?id=60199

Imager 0.75_03 - 09 Aug 2010
==============

Bug fixes:

 - read_types() and write_types() would include png when it wasn't
   available due to a problem with the %formats tie

 - handle dependent libraries correctly (eg -lpng requiring -lz) in
   the code run phase of library probing.

Imager 0.75_02 - 07 Aug 2010
==============

Bug fixes:

 - add file missing from MANIFEST, which was causing TIFF failures.

Imager 0.75_01 - 06 Aug 2010
==============

Test release for the new PNG probe.

 - added the ability to read multiple-image PNM files.
   Note that unlike the pbm/pgm/ppm specification this accepts mixed
   format files and allows white space padding between files.
   Thanks to Philip Gwyn (Leolo) for this patch.

 - moved the PNG file handling code into a sub-module in preparation
   for separate distribution.
   https://rt.cpan.org/Ticket/Display.html?id=49616 (partial)
   Also helps avoid complications from -I/-L compile/link options from
   other libraries.

Bugs:

 - Imager->new(data => $data) didn't try to process image file data in
   $data
   https://rt.cpan.org/Ticket/Display.html?id=58761

 - t/t50basicoo.t no longer depends on the other tests to generate its 
   input files.
   https://rt.cpan.org/Ticket/Display.html?id=9798
   Also, it wasn't testing pnm (pnm vs ppm mix-up)

 - update the documentation of hardinvert to match the change in 0.62.
   https://rt.cpan.org/Ticket/Display.html?id=59785

 - added hardinvertall filter which also inverts the alpha channel
   (sorry for the mess)

 - when probing for TIFF, set LD_RUN_PATH just as the Makefile does so
   the probe can find the library for the test run.