@@ -1,6 +1,16 @@
 Imager release history.  Older releases can be found in Changes.old
 
-Imager 0.76 - 11 Aug 2010
+Imager 0.77 - 11 Aug 2010
+===========
+
+I don't want Imager::File::PNG indexed as part of Imager, but forgot
+to update the META.yml before updating the version.
+
+ - don't index Imager::File::PNG as part of Imager
+
+ - add resources to META.yml
+
+Imager 0.76 - not released
 ===========
 
 Bug fixes:
